--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://spark72018.github.io/portfolio",
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-icons": "^3.2.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
@@ -21,5 +23,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
+  }
 }
