--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://spark72018.github.io/portfolio",
   "dependencies": {
     "gh-pages": "^2.0.1",
