--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://spark72018.github.io/portfolio",
+  "homepage": "https://spark72018.github.io",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.5.2",
