--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://spark72018.github.io",
+  "private": true,
+  "homepage": "https://spark72018.github.io/portfolio",
   "dependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.5.2",
